fix dashboard widget height on small resolutions

--- a/src/app/modules/dashboard/dashboard.component.scss
+++ b/src/app/modules/dashboard/dashboard.component.scss
@@ -24,6 +24,7 @@ gridster {
 
 gridster-item {
   border-radius: 4px;
+  min-height: 282px;
 }
 
 .dashboard-container gridster ::ng-deep gridster-preview {
